--- a/Server_Side/package.json
+++ b/Server_Side/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^14.3.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5"
   }
